crates/nash-report/src/syntax/snapshots/nash_report__syntax__expr__tests__todo_indentbody.snap
---
source: crates/nash-report/src/syntax/expr.rs
expression: "snapshot(Expr::Todo(&Keyword::IndentBody(1, 9), 1, 9), \"value = \")"
---
MISSING EXPRESSION
Region { start: Position { line: 1, column: 9 }, end: Position { line: 1, column: 9 } }

Expected a body after `todo`.

Add an indented expression.
