crates/nash-report/src/syntax/snapshots/nash_report__syntax__expr__tests__todo_indentmessage.snap
---
source: crates/nash-report/src/syntax/expr.rs
expression: "snapshot(Expr::Todo(&Keyword::IndentMessage(1, 9), 1, 9), \"value = \")"
---
UNFINISHED EXPRESSION
Region { start: Position { line: 1, column: 9 }, end: Position { line: 1, column: 9 } }

I was partway through parsing a `todo` expression, but I got stuck here:

I was expecting to see a message expression next. It may need more indentation.
