crates/nash-report/src/syntax/snapshots/nash_report__syntax__expr__tests__trace_indentbody.snap
---
source: crates/nash-report/src/syntax/expr.rs
expression: "snapshot(Expr::Trace(&Keyword::IndentBody(1, 9), 1, 9), \"value = \")"
---
UNFINISHED EXPRESSION
Region { start: Position { line: 1, column: 9 }, end: Position { line: 1, column: 9 } }

I was partway through parsing a `trace` expression, but I got stuck here:

I was expecting to see an expression next. It may need more indentation.
