crates/nash-report/src/syntax/snapshots/nash_report__syntax__expr__tests__trace_indentmessage.snap
---
source: crates/nash-report/src/syntax/expr.rs
description: "value = trace\n\"message\""
---
nash::syntax

  × Expected a message for `trace`.
   ╭─[src/Main.nash:2:1]
 1 │ value = trace
 2 │ "message"
   · ─
   ╰────
  help: Add an indented message expression.
