crates/nash-report/src/syntax/snapshots/nash_report__syntax__expr__tests__trace_missing_body.snap
---
source: crates/nash-report/src/syntax/expr.rs
description: "value = trace \"message\" "
---
nash::syntax

  × Expected an expression in a `trace` expression.
   ╭─[src/Main.nash:1:25]
 1 │ value = trace "message" 
   ·                         ─
   ╰────
  help: Add an expression or `todo` for an unfinished body.
