crates/nash-report/src/syntax/snapshots/nash_report__syntax__expr__tests__tuple_indent_expr1.snap
---
source: crates/nash-report/src/syntax/expr.rs
description: "value = (\n1, 2)"
---
nash::syntax

  × Expected an expression or `)`.
   ╭─[src/Main.nash:2:1]
 1 │ value = (
 2 │ 1, 2)
   · ─
   ╰────
  help: Add an expression inside the parentheses.
