crates/nash-report/src/syntax/snapshots/nash_report__syntax__expr__tests__tuple_indent_expr_n.snap
---
source: crates/nash-report/src/syntax/expr.rs
description: "value = (1,\n2)"
---
nash::syntax

  × Expected a tuple element after `,`.
   ╭─[src/Main.nash:2:1]
 1 │ value = (1,
 2 │ 2)
   · ─
   ╰────
  help: Add an indented expression, or remove a trailing comma.
