crates/nash-report/src/syntax/snapshots/nash_report__syntax__expr__tests__tuple_operator_close.snap
---
source: crates/nash-report/src/syntax/expr.rs
expression: "snapshot(Expr::Tuple(&Tuple::OperatorClose(1, 9), 1, 9), \"value = \")"
---
UNCLOSED DELIMITER
Region { start: Position { line: 1, column: 9 }, end: Position { line: 1, column: 9 } }

Expected `)` to close `(`.

Add `)` here.
