crates/nash-report/src/syntax/snapshots/nash_report__syntax__expr__tests__unicode_escape.snap
---
source: crates/nash-report/src/syntax/expr.rs
description: "value = \"\\u{D800}\""
---
nash::syntax

  × Invalid Unicode scalar value.
   ╭─[src/Main.nash:1:10]
 1 │ value = "\u{D800}"
   ·          ────────
   ╰────
  help: Use 0000–10FFFF, excluding D800–DFFF.
