crates/nash-report/src/syntax/snapshots/nash_report__syntax__expr__tests__weird_end_in_def_context.snap
---
source: crates/nash-report/src/syntax/expr.rs
description: value = 1 = 2
---
nash::syntax

  × Unexpected `=` in expression.
   ╭─[src/Main.nash:1:11]
 1 │ value = 1 = 2
   ·           ─
   ╰────
  help: Use `==` for a comparison, or align a new definition with `value`.
